<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".activities.SeleccionarCategoriaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_categoria_activity_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnCatFriend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_friend"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCatNewConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_new_convert"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCatInactive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_inactive_member"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnCatMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_member"
        android:padding="16dp"
        android:textSize="16sp"/>

</LinearLayout>