<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/btnElderes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_elders"
        android:padding="16dp"
        android:textSize="18sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnSisters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sisters"
        android:padding="16dp"
        android:textSize="18sp"/>

</LinearLayout>